--- a/index.html
+++ b/index.html
@@ -2,15 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>music</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="card">
-      <a href="https://www.youtube.com/watch?v=D1PvIWdJ8xo"><img src="iu.jpeg" alt="아이유"></a>
-      <div class="text">
-        <h1>IU- Blueming</h1>
+    <h1>My playlist</h1>
+    <div class="container">
+      <div class="card">
+        <a href="https://www.youtube.com/watch?v=D1PvIWdJ8xo"><img src="iu.jpeg" alt="아이유"></a>
+        <div class="text">
+          <h2>IU- Blueming</h2>
+        </div>
       </div>
+
+      <div class="card">
+        <a href="https://www.youtube.com/watch?v=EtiPbWzUY9o&t"><img src="ak.jpeg" alt="악동뮤지션"></a>
+        <div class="text">
+          <h2>악동뮤지션-낙하</h2>
+        </div>
+      </div>
+
+      <div class="card">
+        <a href="https://www.youtube.com/watch?v=VOmIplFAGego"><img src="ne.png" alt="뉴진스"></a>
+        <div class="text">
+          <h2>뉴진스-Cookie</h2>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
